--- a/form.html
+++ b/form.html
@@ -11,7 +11,7 @@
 	</head>
 	<body data-ng-controller="formController">
 	
-		<h3>Dynamic Radio Buttons</h3>
+		<h3>Dynamic Form Generator</h3>
 		
 		
 			<button type="button" data-ng-click="getForm()">Get Form</button>
